--- a/relazione.tex
+++ b/relazione.tex
@@ -981,7 +981,10 @@ che contribuiscono a regolarne i comportamento al fine di migliorare le prestazi
 Durante questo lavoro di tirocinio abbiamo studiato i protocolli per dispositivi IoT, studiandone l'aspetto teorico e analizzandole le prestazioni. In futuro
 sarebbe sicuramente interessante introdurre nuove variazioni al protocollo GREEN-WUP che modellano l'esigenza di ottimizzare ulteriormente i consumi energetici
 e le latenze sperimentate. Inoltre vale la pena analizzare le prestazioni che il protocollo raggiunge quando sottoposto a nuove condizioni di traffico o dello
-stato della rete (es. nodi altamente congestionati, link di trasmissione meno performanti).
+stato della rete (es. nodi altamente congestionati, link di trasmissione meno performanti). Nel corso della tesi sono state effettuate prime valutazioni prestazionali
+che hanno portato ad un primo insieme di ottimizzazioni e varianti, attività che potrebbe essere estesa per sviluppare nuovi protocolli e analizzare completamente
+lo spazio dei parametri per ottimizzarli. Infine il SENSES Lab ha realizzato un testbed per reti IoT dotate di wake up radio. Una volta consolidate le varianti e
+le ottimizzazioni dei protocolli sarebbe interessante valutarne sperimentalmente le prestazioni mediante un testbed in ambiente reale.
 
 
 \backmatter
